fix: fix nested bg blur issue in chrome https://stackoverflow.com/questions/60997948/backdrop-filter-not-working-for-nested-elements-in-chrome

--- a/src/pages/global.css
+++ b/src/pages/global.css
@@ -21,6 +21,10 @@
 	.container-main {
 		@apply mx-auto flex-grow px-4 sm:px-6 md:max-w-6xl md:px-8;
 	}
+
+	.container-blur-bg {
+		@apply before:absolute before:left-0 before:top-0 before:-z-10 before:h-full before:w-full before:backdrop-blur-sm;
+	}
 }
 
 @layer theme {
